--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "request-builder"
-version = "0.0.0"
+name = "request-api-builder"
+version = "2.0.1"
 authors = [
  { name="Kateryna Levashova", email="voxquietam.md@gmail.com" },
 ]
@@ -43,6 +43,9 @@ follow_imports = 'silent'
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/request-api-builder"]
 
 [tool.semantic_release.branches.main]
 match = "(master)"
@@ -89,5 +92,4 @@ default_bump_level = 0
 
 [tool.semantic_release.publish]
 dist_glob_patterns = ["dist/*"]
-upload_to_vcs_release = true
 
