--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "request-api-builder"
 version = "2.0.2"
+name = "request_api_builder"
 authors = [
  { name="Kateryna Levashova", email="voxquietam.md@gmail.com" },
 ]
@@ -45,7 +46,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/request-api-builder"]
+packages = ["src/request_api_builder"]
 
 [tool.semantic_release.branches.main]
 match = "(master)"
@@ -63,7 +64,7 @@ allow_zero_version = true
 tag_format = "v{version}"
 logging_use_named_masks = false
 version_variable = "setup.py:__version__"
-commit_subject = "chore(release): bump requiest-api-builder to version {version}"
+commit_subject = "chore(release): bump request_api_builder to version {version}"
 commit_author = "Kateryna Levashova <voxquietam.md@gmail.com>"
 
 [tool.semantic_release.changelog]
